[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tool_eventdetectobjects"
version = "0.0.1"
authors = [
  { name="Runiku Boa", email="bao@robot.t.u-tokyo.ac.jp" },
]
description = "tools for object detection using event camera"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
